--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "nodemon": "^1.11.0",
+    "passport-facebook": "^2.1.1",
     "sqlite3": "^3.1.8",
     "supertest": "^2.0.1"
   },
